feat: added awwpa

--- a/index.html
+++ b/index.html
@@ -148,6 +148,21 @@
           My Resume
         </a>
       </div>
+
+      <!-- <div class="p-5 border border-border rounded bg-border" data-animate>
+        <h2 class="font-[500] text-black text-sm">Need a custom solution?</h2>
+        <p class="text-sm leading-snug mt-3 mb-4">
+          <span class="opacity-90">I have a great team of builders at</span>
+          <span class="font-[400]">awwpa</span>
+          <span class="opacity-90">that are ready to bring your next idea to life.</span>
+        </p>
+
+        <a href="//booluw.substack.com" target="_blank"
+          class="py-2 px-2 !text-center rounded-sm text-primary border border-primary hover:text-white hover:bg-primary font-[500]">
+          Build with awwpa
+        </a>
+      </div> -->
+
       <div class="p-5 border border-border rounded bg-border" data-animate>
         <h2 class="font-[500] text-black text-sm">Newsletter</h2>
         <p class="text-sm leading-snug mt-3 mb-4">
@@ -408,26 +423,26 @@
           <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
-              <img src="/spottang-page-screenshot.webp" alt="Thumbnail of SpottaNG home page"
+              <img src="/awwpa-page-screenshot.webp" alt="Thumbnail of awwpa home page"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
-                <h3 class="font-[500]">Spotta NG</h3>
-                <p class="text-sm mt-1 mb-2 md:line-clamp-3">
-                  See through the lenses of people who have lived or visited the neighbourhood you might have in mind.
+                <h3 class="font-[500] inline-block mr-3">Awwesome Pages</h3>
+                <p class="text-sm mt-1 mb-2 md:line-clamp-3" aria-label="awpa">
+                  Building web applications for the best; businesses, vibe coders and startups.
                 </p>
               </div>
             </div>
-            <a href="//spotta.ng" target="_blank"
+            <a aria-labelledby="awpa" href="//beawesome.page" target="_blank"
               class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
               data-animate>
-              spotta.ng
+              beawesome.page
             </a>
           </div>
 
           <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
-              <img src="/levelhire-page-screenshot.webp" alt="Thumbnail of SpottaNG home page"
+              <img src="/levelhire-page-screenshot.webp" alt="Thumbnail of Level hire home page"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500] inline-block mr-3">LevelHire App</h3>
@@ -494,12 +509,12 @@
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Photosplash</h3>
-                <p class="text-sm mt-1 mb-2 md:line-clamp-3">
+                <p class="text-sm mt-1 mb-2 md:line-clamp-3" aria-label="photosplash">
                   Add customizable text overlay on images, with offline support.
                 </p>
               </div>
             </div>
-            <a href="//ps6555753.web.app" target="_blank"
+            <a aria-labelledby="photosplash" href="//ps6555753.web.app" target="_blank"
               class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
               data-animate>
               ps6555753.web.app
@@ -515,29 +530,79 @@
       <div class="mt-10" data-scroll-section>
         <h2 class="font-[500] text-black text-sm">Experience</h2>
         <div class="flex flex-col gap-3">
+
           <div class="border-b border-border py-2">
             <div>
-              <h3 class="font-[500]">Your Company</h3>
+              <h3 class="font-[500]">Awwesome Pages</h3>
+              <!-- <div class="text-sm flex gap-3">
+                <h4 class="border-r border-border pr-3">
+                  Lead 
+                </h4>
+                <h4 class="">Full-time/Contract</h4>
+              </div> -->
+              <h4 class="text-sm opacity-85">
+                July, 2025 - Current
+              </h4>
+            </div>
+            <p class="my-3 text-sm md:w-2/3">
+              <span class="opacity-75" aria-label="awwpa">
+                Building web applications for the best; businesses, vibe coders and startups.
+              </span><br />
+              <span class="font-[400]">
+                Come build with awwpa.
+              </span>
+
+            </p>
+            <div class="flex flex-wrap">
+              <!-- <div
+                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
+                <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path d="M24,1.61H14.06L12,5.16,9.94,1.61H0L12,22.39ZM12,14.08,5.16,2.23H9.59L12,6.41l2.41-4.18h4.43Z">
+                    </path>
+                  </g>
+                </svg>
+                Vue
+              </div> -->
+
+              <a href="//beawesome.page" target="_blank"
+                class="bg-primary text-white flex gap-3 items-center text-sm py-1 px-2 border border-border rounded-sm transition-colors ease-in-out"
+                aria-labelledby="awwpa">
+                <!-- <svg fill="currentColor" class="w-[16px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M0 12v12h24V0H0zm19.341-.956c.61.152 1.074.423 1.501.865.221.236.549.666.575.77.008.03-1.036.73-1.668 1.123-.023.015-.115-.084-.217-.236-.31-.45-.633-.644-1.128-.678-.728-.05-1.196.331-1.192.967a.88.88 0 0 0 .102.45c.16.331.458.53 1.39.933 1.719.74 2.454 1.227 2.911 1.92.51.773.625 2.008.278 2.926-.38.998-1.325 1.676-2.655 1.9-.411.073-1.386.062-1.828-.018-.964-.172-1.878-.648-2.442-1.273-.221-.243-.652-.88-.625-.925.011-.016.11-.077.22-.141.108-.061.511-.294.892-.515l.69-.4.145.214c.202.308.643.731.91.872.766.404 1.817.347 2.335-.118a.883.883 0 0 0 .313-.72c0-.278-.035-.4-.18-.61-.186-.266-.567-.49-1.649-.96-1.238-.533-1.771-.864-2.259-1.39a3.165 3.165 0 0 1-.659-1.2c-.091-.339-.114-1.189-.042-1.531.255-1.197 1.158-2.03 2.461-2.278.423-.08 1.406-.05 1.821.053zm-5.634 1.002l.008.983H10.59v8.876H8.38v-8.876H5.258v-.964c0-.534.011-.98.026-.99.012-.016 1.913-.024 4.217-.02l4.195.012z">
+                    </path>
+                  </g>
+                </svg> -->
+                Build with awwpa
+              </a>
+            </div>
+          </div>
+
+          <div class="border-b border-border py-2">
+            <div>
+              <h3 class="font-[500]">BFree Africa</h3>
               <div class="text-sm flex gap-3">
                 <h4 class="border-r border-border pr-3">
                   Frontend Developer
                 </h4>
-                <h4 class="">Full-time/Contract</h4>
+                <h4 class="">Fulltime</h4>
               </div>
               <h4 class="text-sm opacity-85">
-                <span data-insert="month"></span>, <span data-insert="year"></span>
+                February, 2022 - June, 2023&nbsp;&nbsp;|&nbsp;&nbsp;January, 2025 - Current
               </h4>
             </div>
-            <p class="my-3 text-sm md:w-2/3">
-              At the moment I am available for hire and would love to meet on how I can be beneficial to your
-              organization's tech needs.
-              <span class="font-[400]">
-                I will love to stick with my framework of choice; VueJS, but would be willing to learn new frameworks as
-                needed by your organization.
-              </span>
-
+            <p class="my-3 text-sm md:w-2/3 opacity-75">
+              Implemented GraphQL subscription on the agent CRM, championed the adoption of PWA for customer
+              self-service 2.0, and implemented a dynamic analytic dashboard for partner's portal.
             </p>
-            <div class="flex flex-wrap gap-2">
+            <div class="flex flex-wrap gap-2 mt-3">
+
               <div
                 class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
                 <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img"
@@ -566,6 +631,33 @@
                   </g>
                 </svg>
                 Typescript
+              </div>
+
+              <div
+                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
+                <svg fill="currentColor" class="w-[18px]" viewBox="0 0 24 24" role="img"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M12,0C5.372,0 0,5.373 0,12 0,18.628 5.372,24 12,24 18.627,24 24,18.628 24,12A12.014,12.014 0 0 0 23.527,8.657 0.6,0.6 0 0 0 22.4,9.066H22.398C22.663,10.009 22.8,10.994 22.8,12A10.73,10.73 0 0 1 19.637,19.637 10.729,10.729 0 0 1 12,22.8 10.73,10.73 0 0 1 4.363,19.637 10.728,10.728 0 0 1 1.2,12 10.73,10.73 0 0 1 4.363,4.363 10.728,10.728 0 0 1 12,1.2C14.576,1.2 17.013,2.096 18.958,3.74A1.466,1.466 0 1 0 19.82,2.9 11.953,11.953 0 0 0 12,0ZM10.56,5.88 6.36,16.782H8.99L9.677,14.934H13.646L12.927,12.892H10.314L12.014,8.201 15.038,16.781H17.669L13.47,5.88Z">
+                    </path>
+                  </g>
+                </svg>
+                Apollo GraphQL
+              </div>
+
+              <div
+                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
+                <svg class="w-[24px] fill-current" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg">
+                  <title />
+                  <path
+                    d="M330.7,352l77.72-192H356.9L303.74,284.07,265.93,160H226.32L185.74,284.07l-28.63-56.53L131.21,307l26.3,45h50.7l36.68-111.27,35,111.27Z" />
+                  <path
+                    d="M48.79,286.09H80.44a93.39,93.39,0,0,0,25.62-3.21l8.18-25.19,22.88-70.39a55.75,55.75,0,0,0-6-7.82Q113.54,160,79.59,160H0V352H48.79Zm41.9-81.92q6.89,6.92,6.88,18.52t-6,18.53q-6.64,7.62-24.44,7.61H48.79V197.25H67.21q16.59,0,23.48,6.92ZM376.85,317.61l14.79-37.25h42.69l-20.26-56.51L439.41,160,512,352H458.47l-12.4-34.39Z" />
+                </svg>
+                PWA
               </div>
             </div>
           </div>
@@ -705,84 +797,6 @@
                   </g>
                 </svg>
                 Typescript
-              </div>
-
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg class="w-[24px] fill-current" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg">
-                  <title />
-                  <path
-                    d="M330.7,352l77.72-192H356.9L303.74,284.07,265.93,160H226.32L185.74,284.07l-28.63-56.53L131.21,307l26.3,45h50.7l36.68-111.27,35,111.27Z" />
-                  <path
-                    d="M48.79,286.09H80.44a93.39,93.39,0,0,0,25.62-3.21l8.18-25.19,22.88-70.39a55.75,55.75,0,0,0-6-7.82Q113.54,160,79.59,160H0V352H48.79Zm41.9-81.92q6.89,6.92,6.88,18.52t-6,18.53q-6.64,7.62-24.44,7.61H48.79V197.25H67.21q16.59,0,23.48,6.92ZM376.85,317.61l14.79-37.25h42.69l-20.26-56.51L439.41,160,512,352H458.47l-12.4-34.39Z" />
-                </svg>
-                PWA
-              </div>
-            </div>
-          </div>
-
-          <div class="border-b border-border py-2">
-            <div>
-              <h3 class="font-[500]">BFree Africa</h3>
-              <div class="text-sm flex gap-3">
-                <h4 class="border-r border-border pr-3">
-                  Frontend Developer
-                </h4>
-                <h4 class="">Fulltime</h4>
-              </div>
-              <h4 class="text-sm opacity-85">
-                February, 2022 - June, 2023
-              </h4>
-            </div>
-            <p class="my-3 text-sm md:w-2/3 opacity-75">
-              Implemented GraphQL subscription on the agent CRM, championed the adoption of PWA for customer
-              self-service 2.0, and implemented a dynamic analytic dashboard for partner's portal.
-            </p>
-            <div class="flex flex-wrap gap-2 mt-3">
-
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M24,1.61H14.06L12,5.16,9.94,1.61H0L12,22.39ZM12,14.08,5.16,2.23H9.59L12,6.41l2.41-4.18h4.43Z">
-                    </path>
-                  </g>
-                </svg>
-                Vue
-              </div>
-
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg fill="currentColor" class="w-[16px]" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M0 12v12h24V0H0zm19.341-.956c.61.152 1.074.423 1.501.865.221.236.549.666.575.77.008.03-1.036.73-1.668 1.123-.023.015-.115-.084-.217-.236-.31-.45-.633-.644-1.128-.678-.728-.05-1.196.331-1.192.967a.88.88 0 0 0 .102.45c.16.331.458.53 1.39.933 1.719.74 2.454 1.227 2.911 1.92.51.773.625 2.008.278 2.926-.38.998-1.325 1.676-2.655 1.9-.411.073-1.386.062-1.828-.018-.964-.172-1.878-.648-2.442-1.273-.221-.243-.652-.88-.625-.925.011-.016.11-.077.22-.141.108-.061.511-.294.892-.515l.69-.4.145.214c.202.308.643.731.91.872.766.404 1.817.347 2.335-.118a.883.883 0 0 0 .313-.72c0-.278-.035-.4-.18-.61-.186-.266-.567-.49-1.649-.96-1.238-.533-1.771-.864-2.259-1.39a3.165 3.165 0 0 1-.659-1.2c-.091-.339-.114-1.189-.042-1.531.255-1.197 1.158-2.03 2.461-2.278.423-.08 1.406-.05 1.821.053zm-5.634 1.002l.008.983H10.59v8.876H8.38v-8.876H5.258v-.964c0-.534.011-.98.026-.99.012-.016 1.913-.024 4.217-.02l4.195.012z">
-                    </path>
-                  </g>
-                </svg>
-                Typescript
-              </div>
-
-              <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg fill="currentColor" class="w-[18px]" viewBox="0 0 24 24" role="img"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M12,0C5.372,0 0,5.373 0,12 0,18.628 5.372,24 12,24 18.627,24 24,18.628 24,12A12.014,12.014 0 0 0 23.527,8.657 0.6,0.6 0 0 0 22.4,9.066H22.398C22.663,10.009 22.8,10.994 22.8,12A10.73,10.73 0 0 1 19.637,19.637 10.729,10.729 0 0 1 12,22.8 10.73,10.73 0 0 1 4.363,19.637 10.728,10.728 0 0 1 1.2,12 10.73,10.73 0 0 1 4.363,4.363 10.728,10.728 0 0 1 12,1.2C14.576,1.2 17.013,2.096 18.958,3.74A1.466,1.466 0 1 0 19.82,2.9 11.953,11.953 0 0 0 12,0ZM10.56,5.88 6.36,16.782H8.99L9.677,14.934H13.646L12.927,12.892H10.314L12.014,8.201 15.038,16.781H17.669L13.47,5.88Z">
-                    </path>
-                  </g>
-                </svg>
-                Apollo GraphQL
               </div>
 
               <div
