--- a/index.html
+++ b/index.html
@@ -15,36 +15,161 @@
   <meta name="msvalidate.01" content="BF9CE271743771A1ACCB19EB651D089C" />
 
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://res.cloudinary.com/dzhxwku5k/image/upload/v1760953196/favicon_zcyffw.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
   <title>Boluwatife Johnson | Frontend developer, and Technical speaker</title>
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Boluwatife Johnson | Frontend developer, and Technical speaker">
-  <meta property="og:image" content="https://booluw.vercel.app/Booluw.jpg">
-  <meta property="og:url" content="https://booluw.vercel.app">
+  <meta property="og:title" content="Boluwatife Johnson | Software Engineer">
+  <meta property="og:image"
+    content="https://res.cloudinary.com/dzhxwku5k/image/upload/v1760953097/ff483eb8-0ec2-4ed7-bcb0-7fabaaaac349.png">
+  <meta property="og:url" content="https://thisisbooluw.website">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Boluwatife Johnson | Frontend developer, and Technical speaker">
-  <meta name="twitter:image" content="https://booluw.vercel.app/Booluw.jpg">
+  <meta name="twitter:title" content="Boluwatife Johnson | Software Engineer">
+  <meta name="twitter:image"
+    content="https://res.cloudinary.com/dzhxwku5k/image/upload/v1760953097/ff483eb8-0ec2-4ed7-bcb0-7fabaaaac349.png">
   <meta name="description"
     content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers. I believe there's no limit to how the browser can go, we haven't just pushed it there yet. Aside coding, I also love to build businesses as I am doing on the side with orunla.ng." />
   <meta property="og:description"
     content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers. I believe there's no limit to how the browser can go, we haven't just pushed it there yet. Aside coding, I also love to build businesses as I am doing on the side with orunla.ng.">
   <meta name="twitter:description"
     content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers. I believe there's no limit to how the browser can go, we haven't just pushed it there yet. Aside coding, I also love to build businesses as I am doing on the side with orunla.ng.">
+  <meta property="og:site_name" content="Boluwatife Johnson" />
 
   <script type="application/ld+json">
   {
-    "@context": "http://schema.org",
-    "@type": "SoftwareApplication",
-    "name": "Photosplash",
-    "image": "https://booluw.vercel.app/photosplash-page-screenshot.webp",
-    "url": "https://ps6555753.web.app/",
-    "author": {
-      "@type": "Person",
-      "name": "Boluwatife Johnson"
-    }
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "WebSite",
+        "name": "Boluwatife Johnson",
+        "url": "https://thisisbooluw.website",
+        "description": "Portfolio site of Boluwatife Johnson - software engineer, frontend developer, technical speaker.",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://thisisbooluw.website/?s={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      },
+      {
+        "@type": "Person",
+        "name": "Boluwatife Johnson",
+        "url": "https://thisisbooluw.website",
+        "image": "https://res.cloudinary.com/dzhxwku5k/image/upload/v1760953097/ff483eb8-0ec2-4ed7-bcb0-7fabaaaac349.png",
+        "jobTitle": "Frontend Engineer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "BFree Africa"
+        },
+        "sameAs": [
+          "https://github.com/booluw",
+          "https://linkedin.com/in/booluw",
+          "https://twitter.com/booluw"
+        ]
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "CtrlCV",
+        "url": "https://ctrlcv.website",
+        "description": "CtrlCV is a free, web-based application that allows users to securely copy, paste, and share text content across devices with encryption and password protection.",
+        "applicationCategory": "WebApplication",
+        "operatingSystem": "Web",
+        "version": "1.0",
+        "datePublished": "2025-10-20",
+        "image": "https://res.cloudinary.com/dzhxwku5k/image/upload/v1760955118/Screenshot_2025-10-20_at_11.10.55_i4v06v.png",
+        "author": {
+          "@type": "Person",
+          "name": "Boluwatife Johnson",
+          "url": "https://thisisbooluw.website"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "2500.00",
+          "priceCurrency": "NGN",
+          "url": "https://ctrlcv.website",
+          "availability": "InStock"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "15"
+        },
+        "featureList": [
+          "Clipboard-based content sharing",
+          "Encrypted data storage",
+          "Password protection for shared content",
+          "Device-to-device content transfer"
+        ],
+        "keywords": [
+          "clipboard sharing",
+          "text encryption",
+          "secure content transfer",
+          "cross-device sharing"
+        ]
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "Awwesome Pages",
+        "url": "https://beawesome.page",
+        "description": "Building web applications for the best; businesses, vibe coders and startups.",
+        "applicationCategory": "WebApplication",
+        "image": "https://thisisbooluw.website/awwpa-page-screenshot.webp",
+        "author": {
+          "@type": "Person",
+          "name": "Boluwatife Johnson"
+        }
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "LevelHire App",
+        "url": "https://app.level-hire.com",
+        "description": "Connect with experienced mentors today! Schedule and attend video sessions with mentors.",
+        "applicationCategory": "WebApplication",
+        "website": "https://thisisbooluw.website/levelhire-page-screenshot.webp",
+        "author": {
+          "@type": "Person",
+          "name": "Boluwatife Johnson"
+        }
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "Orunla",
+        "url": "https://orunla.ng",
+        "description": "Reading made fun and rewarding. Level up your reading skills and unlock rewards as you progress.",
+        "applicationCategory": "WebApplication",
+        "image": "https://thisisbooluw.website/orunla-page-screenshot.webp,
+        "author": {
+          "@type": "Person",
+          "name": "Boluwatife Johnson"
+        }
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "Fufumaps",
+        "url": "https://fufumaps.com",
+        "description": "The ultimate app for African food enthusiasts, travelers, and cultural explorers.",
+        "applicationCategory": "WebApplication",
+        "image": "https://thisisbooluw.website/fufumaps-page-screenshot.webp",
+        "author": {
+          "@type": "Person",
+          "name": "Boluwatife Johnson"
+        }
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "Photosplash",
+        "url": "https://ps6555753.web.app",
+        "description": "Add customizable text overlay on images, with offline support.",
+        "applicationCategory": "WebApplication",
+        "image": "https://thisisbooluw.website/photosplash-page-screenshot.webp",
+        "author": {
+          "@type": "Person",
+          "name": "Boluwatife Johnson"
+        }
+      }
+    ]
   }
   </script>
 </head>
@@ -71,7 +196,8 @@
           </li>
         </ul>
         <div class="my-5 flex items-center justify-between">
-          <a href="//github.com/booluw" target="_blank" class="inline text-black hover:text-primary">
+          <a href="//github.com/booluw" aria-label="Booluw on github" target="_blank"
+            class="inline text-black hover:text-primary">
             <svg fill="currentColor" class="w-[24px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
               <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -83,7 +209,7 @@
             </svg>
           </a>
 
-          <a href="//stackoverflow.com/users/5454933/booluw" target="_blank"
+          <a href="//stackoverflow.com/users/5454933/booluw" aria-label="Booluw on stackoverflow" target="_blank"
             class="inline text-black hover:text-primary">
             <svg fill="currentColor" class="w-[28px]" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -97,7 +223,8 @@
             </svg>
           </a>
 
-          <a href="//linkedin.com/in/booluw" target="_blank" class="inline text-black hover:text-primary">
+          <a href="//linkedin.com/in/booluw" target="_blank" aria-label="Booluw on linkedin"
+            class="inline text-black hover:text-primary">
             <svg fill="currentColor" class="w-[24px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
               <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -109,7 +236,8 @@
             </svg>
           </a>
 
-          <a href="mailto:boluwatife.j.johnson@gmail.com" target="_blank" class="inline text-black hover:text-primary">
+          <a href="mailto:boluwatife.j.johnson@gmail.com" target="_blank" aria-label="Send an email"
+            class="inline text-black hover:text-primary">
             <svg class="w-[32px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
               <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -424,7 +552,8 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/awwpa-page-screenshot.webp" alt="Thumbnail of awwpa home page"
-                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out"
+                height="224px" width="auto" />
               <div class="mt-3">
                 <h3 class="font-[500] inline-block mr-3">Awwesome Pages</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3" aria-label="awpa">
@@ -443,7 +572,8 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/levelhire-page-screenshot.webp" alt="Thumbnail of Level hire home page"
-                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out"
+                height="224px" width="auto" />
               <div class="mt-3">
                 <h3 class="font-[500] inline-block mr-3">LevelHire App</h3>
                 <span class="text-xs bg-orange-50 text-orange-500 font-semibold py-[2px] px-2 rounded">Auth
@@ -465,7 +595,8 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/orunla-page-screenshot.webp" alt="Thumbnail of Orunla Africa landing page"
-                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out"
+                height="224px" width="auto" />
               <div class="mt-3">
                 <h3 class="font-[500]">Orunla</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3">
@@ -485,7 +616,8 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/fufumaps-page-screenshot.webp" alt="Thumbnail of Fufumaps landing page"
-                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out"
+                height="224px" width="auto" />
               <div class="mt-3">
                 <h3 class="font-[500]">Fufumaps</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3">The ultimate app for African food enthusiasts, travelers,
@@ -506,7 +638,8 @@
             <div data-animate>
               <img src="/photosplash-page-screenshot.webp"
                 alt="Thumbnail of Photosplash: Add text overlays to your images"
-                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out"
+                height="224px" width="auto" />
               <div class="mt-3">
                 <h3 class="font-[500]">Photosplash</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3" aria-label="photosplash">
@@ -530,59 +663,6 @@
       <div class="mt-10" data-scroll-section>
         <h2 class="font-[500] text-black text-sm">Experience</h2>
         <div class="flex flex-col gap-3">
-
-          <div class="border-b border-border py-2">
-            <div>
-              <h3 class="font-[500]">Awwesome Pages</h3>
-              <!-- <div class="text-sm flex gap-3">
-                <h4 class="border-r border-border pr-3">
-                  Lead 
-                </h4>
-                <h4 class="">Full-time/Contract</h4>
-              </div> -->
-              <h4 class="text-sm opacity-85">
-                July, 2025 - Current
-              </h4>
-            </div>
-            <p class="my-3 text-sm md:w-2/3">
-              <span class="opacity-75" aria-label="awwpa">
-                Building web applications for the best; businesses, vibe coders and startups.
-              </span><br />
-              <span class="font-[400]">
-                Come build with awwpa.
-              </span>
-
-            </p>
-            <div class="flex flex-wrap">
-              <!-- <div
-                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
-                <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path d="M24,1.61H14.06L12,5.16,9.94,1.61H0L12,22.39ZM12,14.08,5.16,2.23H9.59L12,6.41l2.41-4.18h4.43Z">
-                    </path>
-                  </g>
-                </svg>
-                Vue
-              </div> -->
-
-              <a href="//beawesome.page" target="_blank"
-                class="bg-primary text-white flex gap-3 items-center text-sm py-1 px-2 border border-border rounded-sm transition-colors ease-in-out"
-                aria-labelledby="awwpa">
-                <!-- <svg fill="currentColor" class="w-[16px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M0 12v12h24V0H0zm19.341-.956c.61.152 1.074.423 1.501.865.221.236.549.666.575.77.008.03-1.036.73-1.668 1.123-.023.015-.115-.084-.217-.236-.31-.45-.633-.644-1.128-.678-.728-.05-1.196.331-1.192.967a.88.88 0 0 0 .102.45c.16.331.458.53 1.39.933 1.719.74 2.454 1.227 2.911 1.92.51.773.625 2.008.278 2.926-.38.998-1.325 1.676-2.655 1.9-.411.073-1.386.062-1.828-.018-.964-.172-1.878-.648-2.442-1.273-.221-.243-.652-.88-.625-.925.011-.016.11-.077.22-.141.108-.061.511-.294.892-.515l.69-.4.145.214c.202.308.643.731.91.872.766.404 1.817.347 2.335-.118a.883.883 0 0 0 .313-.72c0-.278-.035-.4-.18-.61-.186-.266-.567-.49-1.649-.96-1.238-.533-1.771-.864-2.259-1.39a3.165 3.165 0 0 1-.659-1.2c-.091-.339-.114-1.189-.042-1.531.255-1.197 1.158-2.03 2.461-2.278.423-.08 1.406-.05 1.821.053zm-5.634 1.002l.008.983H10.59v8.876H8.38v-8.876H5.258v-.964c0-.534.011-.98.026-.99.012-.016 1.913-.024 4.217-.02l4.195.012z">
-                    </path>
-                  </g>
-                </svg> -->
-                Build with awwpa
-              </a>
-            </div>
-          </div>
 
           <div class="border-b border-border py-2">
             <div>
@@ -659,6 +739,31 @@
                 </svg>
                 PWA
               </div>
+            </div>
+          </div>
+
+          <div class="border-b border-border py-2">
+            <div>
+              <h3 class="font-[500]">Awwesome Pages</h3>
+              <h4 class="text-sm opacity-85">
+                July, 2025
+              </h4>
+            </div>
+            <p class="my-3 text-sm md:w-2/3">
+              <span class="opacity-75" aria-label="awwpa">
+                Building web applications for the best; businesses, vibe coders and startups.
+              </span><br />
+              <span class="font-[400]">
+                Come build with awwpa.
+              </span>
+
+            </p>
+            <div class="flex flex-wrap">
+              <a href="//beawesome.page" target="_blank"
+                class="bg-primary text-white flex gap-3 items-center text-sm py-1 px-2 border border-border rounded-sm transition-colors ease-in-out"
+                aria-labelledby="awwpa">
+                Build with awwpa
+              </a>
             </div>
           </div>
 
