--- a/index.html
+++ b/index.html
@@ -551,6 +551,27 @@
           <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
+              <img src="/ctrlcv.png" alt="Thumbnail of CtrlCV: Share and paste textual content over the internet"
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" height="224px"
+                width="auto" />
+              <div class="mt-3">
+                <h3 class="font-[500]">CtrlCV</h3>
+                <p class="text-sm mt-1 mb-2 md:line-clamp-3" aria-label="ctrlcv">
+                  CtrlCV is a free, web-based application that allows users to securely copy, paste, and share text content across devices
+                  with encryption and password protection.
+                </p>
+              </div>
+            </div>
+            <a aria-labelledby="ctrlcv" href="//ctrlcv.website?utm_source=portfolio" target="_blank"
+              class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
+              data-animate>
+              ctrlcv.website
+            </a>
+          </div>
+          
+          <div
+            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
+            <div data-animate>
               <img src="/awwpa-page-screenshot.webp" alt="Thumbnail of awwpa home page"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out"
                 height="224px" width="auto" />
