fix: correct image URL syntax in JSON-LD structured data

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
           "@type": "Offer",
           "price": "2500.00",
           "priceCurrency": "NGN",
-          "url": "https://ctrlcv.website",
           "availability": "InStock"
         },
         "aggregateRating": {
@@ -115,6 +114,13 @@
         "url": "https://beawesome.page",
         "description": "Building web applications for the best; businesses, vibe coders and startups.",
         "applicationCategory": "WebApplication",
+        "operatingSystem": "Web",
+        "version": "1.0",
+        "offers": {
+          "@type": "Offer",
+          "price": 0,
+          "priceCurrency": "USD"
+        },
         "image": "https://thisisbooluw.website/awwpa-page-screenshot.webp",
         "author": {
           "@type": "Person",
@@ -127,7 +133,14 @@
         "url": "https://app.level-hire.com",
         "description": "Connect with experienced mentors today! Schedule and attend video sessions with mentors.",
         "applicationCategory": "WebApplication",
-        "website": "https://thisisbooluw.website/levelhire-page-screenshot.webp",
+        "operatingSystem": "Web",
+        "version": "1.0",
+        "offers": {
+          "@type": "Offer",
+          "price": 0,
+          "priceCurrency": "USD"
+        },
+        "image": "https://thisisbooluw.website/levelhire-page-screenshot.webp",
         "author": {
           "@type": "Person",
           "name": "Boluwatife Johnson"
@@ -139,7 +152,14 @@
         "url": "https://orunla.ng",
         "description": "Reading made fun and rewarding. Level up your reading skills and unlock rewards as you progress.",
         "applicationCategory": "WebApplication",
-        "image": "https://thisisbooluw.website/orunla-page-screenshot.webp,
+        "operatingSystem": "Web",
+        "version": "1.0",
+        "offers": {
+          "@type": "Offer",
+          "price": 0,
+          "priceCurrency": "USD"
+        },
+        "image": "https://thisisbooluw.website/orunla-page-screenshot.webp",
         "author": {
           "@type": "Person",
           "name": "Boluwatife Johnson"
@@ -151,6 +171,13 @@
         "url": "https://fufumaps.com",
         "description": "The ultimate app for African food enthusiasts, travelers, and cultural explorers.",
         "applicationCategory": "WebApplication",
+        "operatingSystem": "Web",
+        "version": "1.0",
+        "offers": {
+          "@type": "Offer",
+          "price": 0,
+          "priceCurrency": "USD"
+        },
         "image": "https://thisisbooluw.website/fufumaps-page-screenshot.webp",
         "author": {
           "@type": "Person",
@@ -163,6 +190,13 @@
         "url": "https://ps6555753.web.app",
         "description": "Add customizable text overlay on images, with offline support.",
         "applicationCategory": "WebApplication",
+        "operatingSystem": "Web",
+        "version": "1.0",
+        "offers": {
+          "@type": "Offer",
+          "price": 0,
+          "priceCurrency": "USD"
+        },
         "image": "https://thisisbooluw.website/photosplash-page-screenshot.webp",
         "author": {
           "@type": "Person",
@@ -172,6 +206,7 @@
     ]
   }
   </script>
+
 </head>
 
 <body
